fix the alignment of the text

--- a/stylesheets/home.css
+++ b/stylesheets/home.css
@@ -25,15 +25,15 @@ h1 {
 .links-container {
   display: flex;
   flex-direction: column;
-  text-align: right;
+  text-align: left;
   height: 70px;
   justify-content: space-between;
   font: lighter 14px/20px Helvetica;
   letter-spacing: -0.14px;
   color: #354463;
   position: relative;
-  bottom: 0.8rem;
-  right: 0.8rem;
+  bottom: 1.8rem;
+  left: 15rem;
 }
 
 a {
